--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.1",
+    "sass": "^1.78.0",
     "use-scan-detection": "^0.2.3",
     "web-vitals": "^2.1.4"
   },
