--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react-barcode-scanner": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.1",
+    "redux": "^5.0.1",
     "sass": "^1.78.0",
     "use-scan-detection": "^0.2.3",
     "web-vitals": "^2.1.4"
